[project]
name = "ripple-cogs"
version = "0.1.0"
description = ""
authors = [
    {name = "ripple"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">3.10,<3.12"
dependencies = [
    "red-discordbot (>=3.5.22,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
